refactor(web): adapt api specification; TODO: watched endpoints
