# docs/openapi.yml
@@ -782,7 +782,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Watchlist"
+                $ref: "#/components/schemas/WatchlistResponse"
         "401":
           description: Unauthorized
           content:
@@ -2515,32 +2515,27 @@ components:
       type: object
       required:
         - id
-        - providers
+        - flatrate
+        - rent
+        - buy
       properties:
         id:
           type: integer
           format: int64
           examples:
             - 278
-        providers:
-          type: object
-          required:
-            - flatrate
-            - rent
-            - buy
-          properties:
-            flatrate:
-              type: array
-              items:
-                $ref: "#/components/schemas/Provider"
-            rent:
-              type: array
-              items:
-                $ref: "#/components/schemas/Provider"
-            buy:
-              type: array
-              items:
-                $ref: "#/components/schemas/Provider"
+        flatrate:
+          type: array
+          items:
+            $ref: "#/components/schemas/Provider"
+        rent:
+          type: array
+          items:
+            $ref: "#/components/schemas/Provider"
+        buy:
+          type: array
+          items:
+            $ref: "#/components/schemas/Provider"
 
     Provider:
       type: object
@@ -2567,6 +2562,15 @@ components:
           type: integer
           examples:
             - 1
+
+    WatchlistResponse:
+      type: object
+      required:
+        - watchlist
+      properties:
+        watchlist:
+          type: object
+          $ref: "#/components/schemas/Watchlist"
 
     Watchlist:
       type: object
